[project]
name = "agora"
authors = [
    { name = "*Agora* is an open-source project and issue management tool designed to streamline team collaboration and productivity. Inspired by the ancient Greek *agora*, a space for gathering and discussion, this app serves as a digital hub for organizing projects, tracking issues, and fostering seamless teamwork.", email = "mavee.shah@hotmail.com"}
]
description = "**Agora - Open Source Project & Issue Management**"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
